@@ -100,7 +100,9 @@ Executable git-annex
   if flag(Production)
     GHC-Options: -O2
 
-  if (! os(windows))
+  if (os(windows))
+    Build-Depends: Win32
+  else
     Build-Depends: unix
     -- Need to list these because they're generated from .hsc files.
     Other-Modules: Utility.Touch Utility.Mounts
