@@ -19,6 +19,7 @@ git-annex (5.20131131) UNRELEASED; urgency=low
   * import: better handling of overwriting an existing file/directory/broken
     link when importing
   * Windows: assistant and webapp work! (very experimental)
+  * Windows: Support annex.diskreserve.
   * Fix bad behavior in Firefox, which was caused by an earlier fix to
     bad behavior in Chromium.
 
